objects/CaseFunding__c.object
<CustomObject>
    <description>To track funding associated with client cases.</description>
    <fields>
        <fullName>CaseFundingMigrationReferenceID__c</fullName>
        <externalId>true</externalId>
        <label>Case Funding Migration Reference ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClientCaseName__c</fullName>
        <label>Client Case Name</label>
        <referenceTo>ClientCase__c</referenceTo>
        <relationshipLabel>Case Funding</relationshipLabel>
        <relationshipName>Case_Funding</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CounselingSessionType__c</fullName>
        <label>Counseling Session Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>CounselingSessionType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ExternalID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FundName__c</fullName>
        <label>Fund Name</label>
        <referenceTo>Fund__c</referenceTo>
        <relationshipLabel>Case Funding</relationshipLabel>
        <relationshipName>Case_Funding</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LevelCompletionDate__c</fullName>
        <label>Level Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ParentIds__c</fullName>
        <description>It stores the combination of Fund_Name__c and Service_Name__c in mentioned order.</description>
        <label>Parent IDs</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PrimaryCounselingOutcome__c</fullName>
        <label>Primary Counseling Outcome</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>CounselingOutcome</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ReadyforReviewPayment__c</fullName>
        <label>Ready for Review/Payment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_NO</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ResidenceTypeatStartofService__c</fullName>
        <description>The type of housing ownership indicated on the Service record (Residence Type at Start of Service). Determines the different outcomes available for Primary and Secondary picklist fields.</description>
        <label>Residence Type at Start of Service</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Own</fullName>
                </value>
                <value>
                    <fullName>Rent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SecondaryCounselingOutcome__c</fullName>
        <label>Secondary Counseling Outcome</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>CounselingOutcome</valueSetName>
        </valueSet>
    </fields>
    <label>Case Funding</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CF-{000000}</displayFormat>
        <label>Case Funding Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Funding</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>